--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,17 @@
 ## => Site Settings
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+highlight_theme: tomorrow # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : Your Site Title
+title   : Gitronlee|排好队，一个一个来！
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  有时候，会想写点东西。
 
 
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
+lang: "zh"# the language of your site, default as "en"
 timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
