--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ highlight_theme: tomorrow # "default" (default), "tomorrow", "tomorrow-night", "
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : Gitronlee | 排好队，一个一个来！
-description: > # this means to ignore newlines until "Language & timezone"
-  有时候，会想写点东西。
+description: >有时候，会想写点东西。 # this means to ignore newlines until "Language & timezone"
+  
 
 
 ## => Language and Timezone
