--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ highlight_theme: tomorrow # "default" (default), "tomorrow", "tomorrow-night", "
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : Gitronlee | 排好队，一个一个来！
-description: >有时候，会想写点东西。 # this means to ignore newlines until "Language & timezone"
+description: >"有时候，会想写点东西。" # this means to ignore newlines until "Language & timezone"
   
 
 
